# feedertwin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
dashboard/: index.html
docs/: stage1_transport_findings.md  stage2_flow_findings.md  stage3_strategies_findings.md  stage4_mcda_findings.md  stage5_dashboard_notes.md
docs/sa/: 01-concept.md  02-requirements.md  03-architecture.md  04-control.md  05-results.md
scripts/: build_dashboard.py  run_flow_study.py  run_mcda_study.py  run_strategies_study.py  run_transport_study.py
src/feedertwin/: __init__.py  flowsim.py  mcda.py  strategies.py  transport.py
tests/: test_flowsim.py  test_mcda.py  test_strategies.py  test_transport.py
website/: README.md  docusaurus.config.js  package.json  sidebars.js
website/src/css/: custom.css
website/src/pages/: dashboard.js  index.js  index.module.css
