[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feedertwin"
version = "0.3.0"
description = "Имитационная модель и исследование стратегий управления для автоматической системы поштучной подачи мелкоразмерных изделий"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maksim Lastovenko" }]
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "simpy>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
